// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedThemedView Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    nativeID="0"
    role="group"
    style={
      [
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  />
</View>
`;

exports[`ThemedScreenWrap Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    role="group"
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        {},
      ]
    }
  />
</View>
`;

exports[`ThemedScrollView Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    accessible={true}
    contentContainerStyle={
      {
        "paddingBottom": 16,
      }
    }
    role="group"
    showsHorizontalScrollIndicator={true}
    showsVerticalScrollIndicator={true}
    style={
      [
        {},
      ]
    }
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`ThemedView Render & Snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    role="group"
    style={
      [
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  />
</View>
`;
